--- a/packages/web-components/src/components/ic-select/ic-select.css
+++ b/packages/web-components/src/components/ic-select/ic-select.css
@@ -12,30 +12,45 @@
 
   --ic-input-label-helpertext-padding: var(--ic-space-xxs);
   --menu-max-height: 100px;
+  --border-color: var(--ic-select-field-border);
+  --border-color-hover: var(--ic-select-field-border-hover);
+  --border-color-pressed: var(--ic-select-field-border-pressed);
+  --border-color-disabled: var(--ic-select-field-border-disabled);
+  --border-color-error: var(--ic-select-field-border-error);
+  --border-color-error-hover: var(--ic-select-field-border-error-hover);
+  --border-color-error-pressed: var(--ic-select-field-border-error-pressed);
+  --border-color-success: var(--ic-select-field-border-success);
+  --border-color-success-hover: var(--ic-select-field-border-success-hover);
+  --border-color-success-pressed: var(--ic-select-field-border-success-pressed);
+  --border-color-warning: var(--ic-select-field-border-warning);
+  --border-color-warning-hover: var(--ic-select-field-border-warning-hover);
+  --border-color-warning-pressed: var(--ic-select-field-border-warning-pressed);
+  --ic-input-label-text-color: var(--ic-select-field-labe);
+  --ic-input-label-helper-text-color: var(
+    --ic-select-input-field-label-subtitle
+  );
+  --ic-input-validation-status-text-color: var(--ic-select-state-text);
+  --ic-input-validation-error: var(--ic-select-state-icon-error);
+  --ic-input-validation-warning-icon-color: var(--ic-select-state-icon-warning);
+  --ic-input-validation-success-icon-color: var(--ic-select-state-icon-success);
+  --menu-item-text-color: var(--ic-select-list-option-text);
+  --menu-bg-color: var(--ic-select-list-option-background);
+  --menu-border-color: var(--ic-select-dropdown-list-border);
+}
+
+:host(.ic-select-disabled) {
+  --ic-input-label-text-color: var(--ic-select-field-label-disabled);
+  --ic-input-label-helper-text-color: var(
+    --ic-select-input-field-label-subtitle-disabled
+  );
 }
 
 :host(.ic-select-full-width) {
   width: 100%;
 }
 
-ic-input-component-container {
-  --input-bg-color: var(--ic-select-background-color);
-}
-
-ic-input-component-container:hover {
-  --border-color: var(--ic-select-input-component-container-hover-border-color);
-}
-
-ic-input-component-container:active {
-  --border-color: var(
-    --ic-select-input-component-container-active-border-color
-  );
-}
-
 ic-input-component-container.menu-open {
-  --border-color: var(
-    --ic-select-input-component-container-active-border-color
-  );
+  --border-color: var(--ic-select-field-border-pressed);
 }
 
 ic-input-validation .status-icon,
@@ -56,8 +71,8 @@ ic-input-label {
 select {
   border: 0;
   border-radius: var(--ic-border-radius);
-  background-color: var(--ic-select-background-color);
-  color: var(--ic-select-content-text-color);
+  background-color: var(--ic-select-field-background);
+  color: var(--ic-select-content-text);
   line-height: 1.5rem;
   letter-spacing: 0.005rem;
   width: 100%;
@@ -67,16 +82,17 @@ select {
   background-repeat: no-repeat;
   background-position: right 0.375rem center;
   background-image: var(--ic-select-mobile-dropdown-icon);
+  caret-color: var(--ic-select-input-field-text-cursor);
 }
 
 select option,
 .select-option-selected {
-  color: var(--ic-select-list-option-text-color);
+  color: var(--ic-select-list-option-text);
 }
 
 select:disabled {
-  color: var(--ic-select-disabled-content-text-color);
-  background-image: url("data:image/svg+xml;utf8,<svg fill='grey' height='24' viewBox='0 0 24 24' width='24' xmlns='http://www.w3.org/2000/svg'><path d='M7 10l5 5 5-5z'/><path d='M0 0h24v24H0z' fill='none'/></svg>");
+  color: var(--ic-select-content-text-disabled);
+  background-image: var(--ic-select-mobile-dropdown-icon-disabled);
 }
 
 select:focus {
@@ -105,8 +121,8 @@ select:not([disabled]) {
   justify-content: space-between;
   background: none;
   border: none;
-  background-color: var(--ic-select-background-color);
-  color: var(--ic-select-content-text-color);
+  background-color: var(--ic-select-field-background);
+  color: var(--ic-select-content-text);
 }
 
 .select-input:focus {
@@ -188,7 +204,7 @@ select:not([disabled]) {
 
 :host(.ic-select-disabled) .value-text,
 .placeholder {
-  color: var(--ic-select-disabled-content-text-color);
+  color: var(--ic-select-content-placeholder-text);
 }
 
 .select-input-end {
@@ -203,7 +219,7 @@ select:not([disabled]) {
 
 .divider {
   width: var(--ic-space-1px);
-  background-color: var(--ic-select-content-divider-color);
+  background-color: var(--ic-select-content-divider);
   margin: var(--ic-space-xxs) 0;
   border-radius: var(--ic-space-1px);
   height: var(--ic-space-lg);
@@ -218,6 +234,7 @@ select:not([disabled]) {
 }
 
 .clear-button {
+  color: var(--ic-select-clear-button);
   position: absolute;
   right: calc(var(--ic-space-xl) + var(--ic-space-xxs) - var(--ic-space-1px));
   border-radius: var(--ic-border-radius);
@@ -248,11 +265,11 @@ select:not([disabled]) {
 }
 
 ::slotted([slot="icon"]) {
-  fill: var(--ic-select-disabled-content-text-color);
+  fill: var(--ic-select-content-placeholder-text);
 }
 
 .has-value ::slotted([slot="icon"]) {
-  fill: var(--ic-select-content-text-color);
+  fill: var(--ic-select-content-text);
 }
 
 .readonly ::slotted([slot="icon"]) {
